samples/_failures_safe/1761269613_7f20b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a197726.c: In function ‘main’:
./samples/SAFE/__tmp_8a197726.c:126:12: error: missing terminating " character
  126 |     printf("\nSecond matrix:\n
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8a197726.c:126:5: error: expected expression at end of input
  126 |     printf("\nSecond matrix:\n
      |     ^~~~~~
./samples/SAFE/__tmp_8a197726.c:126:5: error: expected declaration or statement at end of input
